--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backoffice",
+  "name": "4nextbackoffice-login-com-blockchain",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.8.1",
+    "@tailwindcss/postcss": "^4.0.9",
+    "axios": "^1.7.9",
+    "cookie": "^1.0.2",
     "ethers": "^6.13.5",
-    "next": "15.2.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5"
+    "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.2.0",
-    "tailwindcss": "^4"
+    "eslint-config-next": "15.1.6",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
